feat(custom categories): hole new domain for categories
new routes, services, infra, mocks and tests just for categories
